# BatchLAS

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  FUNCTION_HEADER_REFACTOR.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md  RITZ_VALUES.md  TEST_FRAMEWORK_IMPROVEMENTS.md  backend_config.h.in
.github/prompts/: semantic-commit-unstaged.prompt.md
_codeql_build_dir/src/: batchlas_sycl_obj_dummy.cc
benchmarks/: CMakeLists.txt  acc_utils.hh  band_reduction_benchmark.cc  bandr1_dump.cc  bench_utils.hh  cusolverdx_heev_benchmark.cc  cusolverdx_htev_benchmark.cc  eigensolver_accuracy.cc  gemm_128x32x32_family_benchmark.cc  gemm_128x64x32_family_benchmark.cc  gemm_benchmark.cc  gemm_custom.cc  gemm_heterogeneous_benchmark.cc  gemm_steady_benchmark.cc  gemm_transpose_benchmark.cc  gemv_benchmark.cc  geqrf_benchmark.cc  gesvd_blocked_acc.cc  gesvd_blocked_benchmark.cc  iluk_convergence_stats.cc  lanczos_benchmark.cc  latrd_lower_panel_benchmark.cc  matrix_copy_benchmark.cc  miniacc_accuracy_common.hh  orgqr_benchmark.cc  ormqr_benchmark.cc  ormqr_blocked_benchmark.cc  ormqr_cta_benchmark.cc  ortho_benchmark.cc  orthogonality_accuracy.cc  orthogonality_miniacc.cc  permuted_copy_benchmark.cc  spmm_benchmark.cc  stedc_acc.cc  stedc_benchmark.cc  stehr_benchmark.cc  steqr_acc.cc  steqr_accuracy.cc  steqr_benchmark.cc  steqr_cta_acc.cc  (+20 more)
cmake/: BatchLASCompilerBootstrap.cmake  BatchLASConfig.cmake.in  BatchLASDependencies.cmake  BatchLASDetectSYCL.cmake  BatchLASGeneratedHeaders.cmake  BatchLASOptions.cmake  BatchLASPackaging.cmake  BatchLASTargetHelpers.cmake  backend_config.h.in  tuning_params.h.in
evaluation/: README.md  perf_cases.json  perf_eval.py
evaluation/tuning/: README.md  generate_tuning_header.py  tune.py
include/: batchlas.hh
include/batchlas/: tuning_params.hh
include/blas/: csr_generators.hh  cublas_matrixview.hh  enums.hh  extensions.hh  extensions_new.hh  extra.hh  functions.hh  functions_matrixview.hh  linalg.hh  matrix.hh  matrix_handle.hh  matrix_handle_new.hh
include/internal/: ormbr.hh  ormqr_blocked.hh  sort.hh  sytrd_blocked.hh
include/util/: bench_structured.hh  group-invoke.hh  kernel-heuristics.hh  mempool.hh  miniacc.hh  minibench.hh  minibench_structured.hh  simple_benchmark.hh  sycl-device-queue.hh  sycl-span.hh  (+2 more)
playground/: bandr1_evolution.py  compare_bandr1_step_dump.py  householder_sb2st.py  householder_sb2st_legacy.py  plot_bandr1_evolution.py  portable_banded_tridiagonal.py  syevx_history_batch.py  test_householder_sb2st.py
plotting/: bench_common.py  eigensolver_accuracy_heatmap.py  iluk_convergence_plot.py  iluk_convergence_stats_plot.py  orthogonality_accuracy_heatmap.py  steqr_accuracy_heatmap.py  steqr_compare_plot.py  steqr_plot.py  stylesheet.py  syev_compare_blocked_fixed_batch_plot.py  syev_compare_fixed_batch_plot.py  syev_compare_plot.py  syevx_iluk_acc_plot.py
python/: CMakeLists.txt  ortho_investigation.ipynb
python/batchlas/: __init__.py  _api.py  _options.py  batchlas_bindings.cpp  module.cc
python/batchlas/bindings/: init.hh  ops_blas.cc  ops_factorization.cc  ops_misc.cc  ops_spectral.cc  support.hh  types.cc
python/tests/: test_batchlas.py
scripts/: run_gemm_family_sweep.sh  run_gemm_steady_campaign.sh  run_gemm_steady_profile.sh  run_syevx_benchmark.py
src/: CMakeLists.txt  csr_generators.cc  linalg-impl.hh  math-helpers.hh  matrix.cc  queue.hh
src/backends/: CMakeLists.txt  backend_handle.cc  backend_handle_impl.hh  backend_handle_instantiations.cc  cublas.cc  cublas_matrixview.cc  cublasdx_dispatch_common.hh  cublasdx_fused_common.hh  cusolver.cc  cusolver_matrixview.cc  cusolverdx.cc  cusolverdx.hh  cusolverdx_kernels.cu  cusparse.cc  cusparse_matrixview.cc  gemm_cublasdx.cu  gemm_cublasdx.hh  gemm_cublasdx_dispatch.cc  gemm_cublasdx_dispatch.hh  gemm_cublasdx_kernels.hh  gemm_variant.hh  matrix_handle_impl.cc  mkl.cc  netlib_lapack.cc  rocblas.cc  rocsolver.cc  rocsparse.cc  symm_cublasdx_fused.cu  symm_cublasdx_fused.hh  symm_custom_dispatch.cc  symm_custom_dispatch.hh  syr2k_cublasdx_fused.cu  syr2k_cublasdx_fused.hh  syr2k_custom_dispatch.cc  syr2k_custom_dispatch.hh  syrk_cublasdx_fused.cu  syrk_cublasdx_fused.hh  syrk_custom_dispatch.cc  syrk_custom_dispatch.hh  trmm_cublasdx_fused.cu  (+3 more)
src/blas/: CMakeLists.txt
src/extensions/: CMakeLists.txt  band_reduction.cc  bdsqr.cc  chebfd.cc  gebrd.cc  gesvd_blocked.cc  iluk.cc  inv.cc  inv_matrixview.cc  lanczos.cc  lanczos_matrixview.cc  lascl.cc  latrd_lower_panel.cc  lobpcg.cc  ormbr.cc  ormqr_blocked.cc  ormqr_cta.cc  ortho.cc  ortho_matrixview.cc  ritz_values.cc  stedc.cc  stedc_flat.cc  stedc_flattened.hh  stedc_merge_cta.cc  stedc_merge_kernels.cc  stedc_merge_kernels.hh  stedc_secular.cc  stedc_secular.hh  steqr.cc  steqr_cta.cc  steqr_internal.hh  steqr_legacy.cc  steqr_wg.cc  syev_blocked.cc  syev_cta.cc  syev_two_stage.cc  syevx.cc  syevx_matrixview.cc  symm.cc  syr2k.cc  (+10 more)
src/extra/: CMakeLists.txt  cond.cc  norm.cc  random_cond.cc  transpose.cc
src/sycl/: CMakeLists.txt  gemm_kernels.cc  gemm_kernels.hh
src/sycl/gemm/: accessors.hh  epilogue_linear.hh  load_policies.hh  persistent.hh  register_launchers.hh  register_tiled_common.hh  split_k.hh  tiled_general.hh
src/util/: CMakeLists.txt  kernel-trace.hh  queue-impl.cc  sycl-util-impl.cc  template-instantiations.hh
tests/: CMakeLists.txt  blas_operations_tests.cc  cond_tests.cc  gemm_tests.cc  gemv_operations_tests.cc  gemv_tests.cc  gesvd_tests.cc  iluk_tests.cc  inverse_tests.cc  lanczos_tests.cc  matrix_tests.cc  matrix_view_tests.cc  mempool_tests.cc  minibench_cli_tests.cc  norm_tests.cc  orgqr_tests.cc  ormqr_blocked_tests.cc  ormqr_cta_tests.cc  ormqr_tests.cc  ortho_benchmark.cc  ortho_tests.cc  ritz_values_tests.cc  stedc_tests.cc  steqr_tests.cc  syev_blocked_tests.cc  syev_cta_tests.cc  syev_tests.cc  syevx_benchmark.cc  syevx_tests.cc  symm_tests.cc  syr2k_tests.cc  syrk_tests.cc  sytrd_blocked_tests.cc  sytrd_cta_tests.cc  sytrd_sb2st_tests.cc  sytrd_sy2sb_tests.cc  test_utils.hh  transpose_tests.cc  trmm_tests.cc  trsm_operations_tests.cc  (+4 more)
(+28 files in other folders)
